syntax = "proto3";

package users;

option go_package = "github.com/Naveen2070/Go-projects/common-service/users";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc GetUserById(GetUserByIdRequest) returns (User);
  rpc GetUsers(GetUsersRequest) returns (Users);
}

message GetUsersRequest {

}

message Users {
  repeated User users = 1;
}

message User{
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string username = 4;
  string email = 5;
  string last_updated = 6;
  string created_at = 7;
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string username = 3;
  string password = 4;
  string email = 5;
}

message GetUserByIdRequest {
  string user_id = 1; 
}

service HealthService {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1; 
}
